client/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
  text-align: center
}
.App-footer {
  background-color: #282c34;
  height:35px;
  padding: 0;
  margin:0;
  color: white;
  position:fixed;
  left:0px;
  bottom:0px;
}

.App-link {
  color: #61dafb;
}

a:link {
  color: white;
  background-color: transparent;
  text-decoration: none;
  opacity:.8;
}

a:visited {
  color: white;
  background-color: transparent;
  text-decoration: none;
  opacity:.8;
}

a:hover {
  color: white;
  background-color: transparent;
  text-decoration: underline;
  opacity:1;
}

a:active {
  color: white;
  background-color: transparent;
  text-decoration: underline;
  opacity:1;
}

.Hint-text {
  color: #FFFFFF;
  font-size: 12px;
}

.Image-upload {
  padding:5px;
  margin: 20px;
  text-align: center;
  border-style: solid;
  border-color: #0f1115;
  border-radius: 0px;
}


.Proceed-button {
  background-color: #282c34;
  border-style: solid;
  color: #FFFFFF;
  border-color: #FFFFFF;
  border-radius: 5px;
  font-size: 24px;
  margin-left:12px;
  margin-right:12px;
  cursor: pointer;
}

.hidden {
  opacity: 0;
  pointer-events: none;
}

.Fade-out {
  animation-name: FadeOut;
  animation-duration: .7s;
  transition-timing-function: linear;
  animation-fill-mode: forwards;
}

.disabled {
  pointer-events: none;
}

.Fade-in {
  animation-name: FadeIn;
  animation-duration: .7s;
  transition-timing-function: linear;
  animation-fill-mode: forwards;
}

.Main-image {
  max-height: 50vh;
  max-width: 50vw;
  outline: 5px;
  outline-style: solid;
  outline-color: #0f1115;
  width: auto;
  height: 100%;
  margin: 20px;
  user-select: none;
  pointer-events: none;
  -webkit-user-select: none;
  -webkit-user-drag: none;
}

.Main-image-wide {
  max-height: 50vh;
  max-width: 50vw;
  outline: 5px;
  outline-style: solid;
  outline-color: #0f1115;
  width: 100%;
  height: auto;
  position: absolute;
  top: 0px;
  left: 0px;
}

.outsideWrapper {
  width: 1000px;
  /*border: 1px solid blue;*/
}

.insideWrapper {
  width: 100%;
  height: 100%;
  position: relative;
}

.coveredImage {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0px;
  left: 0px;
}

.Horizontal-list {
  list-style-type:none;
}

.Horizontal-list-element {
  display:inline-flex;
}

.Slider-label {
  width:50px;
  height:0px;
  padding-left:20px;
  padding-top:0px;
  padding-bottom:40px;
  margin-top:5px;
  margin-bottom:20px;
}

.coveringCanvas {
  position: absolute;
  top: 0px;
  left: 0px;
  /*background-color: rgba(255, 0, 0, .1);*/
  cursor: pointer;
}

@keyframes FadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes FadeOut {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.Proceed-button:hover {
  background-color: #171a20;
  border-style: solid;
  color: #FFFFFF;
  font-size: 24px
}

.Proceed-button:active {
  background-color: #0f1115;
  border-style: solid;
  color: #FFFFFF;
  font-size: 24px
}

.Check-box {
  margin-left:15px;
  margin-bottom: 35px
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

